<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2002-2022, the original author or authors.

    This software is distributable under the BSD license. See the terms of the
    BSD license in the documentation provided with this software.

    https://opensource.org/licenses/BSD-3-Clause

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jline</groupId>
        <artifactId>jline-parent</artifactId>
        <version>3.25.0-SNAPSHOT</version>
    </parent>

    <artifactId>jansi</artifactId>
    <name>Jansi bundle</name>

    <properties>
        <automatic.module.name>org.jansi</automatic.module.name>
        <javadocOptions>--enable-preview --release 21</javadocOptions>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jansi-core</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline-terminal</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline-terminal-jni</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline-terminal-ffm</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <phase>process-sources</phase>
                        <configuration>
                            <artifactItems>
                                <!-- sources -->
                                <artifactItem>
                                    <groupId>org.jline</groupId>
                                    <artifactId>jline-native</artifactId>
                                    <classifier>sources</classifier>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jline</groupId>
                                    <artifactId>jline-terminal</artifactId>
                                    <classifier>sources</classifier>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jline</groupId>
                                    <artifactId>jline-terminal-jni</artifactId>
                                    <classifier>sources</classifier>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jline</groupId>
                                    <artifactId>jansi-core</artifactId>
                                    <classifier>sources</classifier>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                </artifactItem>

                                <!-- resources -->
                                <artifactItem>
                                    <groupId>org.jline</groupId>
                                    <artifactId>jline-native</artifactId>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
                                    <excludes>**/*.class</excludes>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jline</groupId>
                                    <artifactId>jline-terminal</artifactId>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
                                    <excludes>**/*.class</excludes>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jline</groupId>
                                    <artifactId>jline-terminal-jni</artifactId>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
                                    <excludes>**/*.class</excludes>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jline</groupId>
                                    <artifactId>jline-terminal-ffm</artifactId>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
                                    <excludes>**/*.class</excludes>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jline</groupId>
                                    <artifactId>jansi-core</artifactId>
                                    <type>jar</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
                                    <excludes>**/*.class</excludes>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <phase>generate-sources</phase>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources</source>
                            </sources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>add-resource</id>
                        <goals>
                            <goal>add-resource</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>${project.build.directory}/generated-resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <showWarnings>true</showWarnings>
                    <fork>true</fork>
                </configuration>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <excludes>
                                <exclude>**/ffm/*.java</exclude>
                            </excludes>
                            <compilerArgs>
                                <arg>-Xlint:all,-options</arg>
                                <arg>-Werror</arg>
                            </compilerArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jdk21</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>**/ffm/*.java</include>
                            </includes>
                            <release>21</release>
                            <compilerArgs>
                                <arg>-Xlint:all,-options</arg>
                                <arg>-Werror</arg>
                                <arg>--enable-preview</arg>
                            </compilerArgs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <configuration>
                    <instructions>
                        <Main-Class>org.jline.jansi.AnsiMain</Main-Class>
                        <Automatic-Module-Name>${automatic.module.name}</Automatic-Module-Name>
                        <Export-Package>*;-noimport:=true</Export-Package>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
